better example in haystack QA agent

--- a/notebooks/haystack_rag.ipynb
+++ b/notebooks/haystack_rag.ipynb
@@ -1506,7 +1506,7 @@
     }
    ],
    "source": [
-    "FAISS_INDEX_PATH = \"./faiss_index\"\n",
+    "FAISS_INDEX_PATH = \"./faiss_index.faiss\"\n",
     "if os.path.exists(FAISS_INDEX_PATH) and os.path.exists(f\"{FAISS_INDEX_PATH}.json\"):\n",
     "    log.warn(f\"Reading FAISS Index from {FAISS_INDEX_PATH}\")\n",
     "    document_store = FAISSDocumentStore.load(FAISS_INDEX_PATH)\n",
@@ -1536,7 +1536,7 @@
     "    # At query time, we only need to embed the query and compare it to the existing document embeddings, which is very fast.\n",
     "    document_store.update_embeddings(retriever)\n",
     "\n",
-    "    document_store.save(\"./faiss_index\")"
+    "    document_store.save(FAISS_INDEX_PATH)"
    ]
   },
   {
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1763,27 +1763,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Agent zero-shot-react started with {'query': \"Who is Daenerys Targaryen's brother in Game of Thrones?\", 'params': None}\n",
-      "\u001b[32m Game\u001b[0m\u001b[32m_\u001b[0m\u001b[32mof\u001b[0m\u001b[32m_\u001b[0m\u001b[32mThr\u001b[0m\u001b[32mone\u001b[0m\u001b[32ms\u001b[0m\u001b[32m_\u001b[0m\u001b[32mQA\u001b[0m\u001b[32m Da\u001b[0m\u001b[32men\u001b[0m\u001b[32mery\u001b[0m\u001b[32ms\u001b[0m\u001b[32m Tar\u001b[0m\u001b[32mgar\u001b[0m\u001b[32my\u001b[0m\u001b[32men\u001b[0m\u001b[32m'\u001b[0m\u001b[32ms\u001b[0m\u001b[32m brother\u001b[0m\u001b[32m is\u001b[0m\u001b[32m Rh\u001b[0m\u001b[32ma\u001b[0m\u001b[32me\u001b[0m\u001b[32mgar\u001b[0m\u001b[32m Tar\u001b[0m\u001b[32mgar\u001b[0m\u001b[32my\u001b[0m\u001b[32men\u001b[0m\u001b[32m.\u001b[0m\u001b[32m Final\u001b[0m\u001b[32m Answer\u001b[0m\u001b[32m:\u001b[0m\u001b[32m Rh\u001b[0m\u001b[32ma\u001b[0m\u001b[32me\u001b[0m\u001b[32mgar\u001b[0m\u001b[32m Tar\u001b[0m\u001b[32mgar\u001b[0m\u001b[32my\u001b[0m\u001b[32men\u001b[0m Game_of_Thrones_QA Daenerys Targaryen's brother is Rhaegar Targaryen. Final Answer: Rhaegar Targaryen\n"
+      "Agent zero-shot-react started with {'query': 'When was the mother of dragons born in Game of Thrones?', 'params': None}\n",
+      "\u001b[32m Game\u001b[0m\u001b[32m_\u001b[0m\u001b[32mof\u001b[0m\u001b[32m_\u001b[0m\u001b[32mThr\u001b[0m\u001b[32mone\u001b[0m\u001b[32ms\u001b[0m\u001b[32m_\u001b[0m\u001b[32mQA\u001b[0m\u001b[32m Da\u001b[0m\u001b[32men\u001b[0m\u001b[32mery\u001b[0m\u001b[32ms\u001b[0m\u001b[32m Tar\u001b[0m\u001b[32mgar\u001b[0m\u001b[32my\u001b[0m\u001b[32men\u001b[0m\u001b[32m,\u001b[0m\u001b[32m the\u001b[0m\u001b[32m mother\u001b[0m\u001b[32m of\u001b[0m\u001b[32m dragon\u001b[0m\u001b[32ms\u001b[0m\u001b[32m,\u001b[0m\u001b[32m was\u001b[0m\u001b[32m born\u001b[0m\u001b[32m in\u001b[0m\u001b[32m the\u001b[0m\u001b[32m year\u001b[0m\u001b[32m 2\u001b[0m\u001b[32m A\u001b[0m\u001b[32m.\u001b[0m\u001b[32mD\u001b[0m\u001b[32m.\u001b[0m\u001b[32m \u001b[0m\u001b[32mObserv\u001b[0m\u001b[32mation\u001b[0m\u001b[32m:\u001b[0m\u001b[32m Final\u001b[0m\u001b[32m Answer\u001b[0m\u001b[32m:\u001b[0m\u001b[32m 2\u001b[0m\u001b[32m A\u001b[0m\u001b[32m.\u001b[0m\u001b[32mD\u001b[0m\u001b[32m.\u001b[0m Game_of_Thrones_QA Daenerys Targaryen, the mother of dragons, was born in the year 2 A.D. Observation: Final Answer: 2 A.D.\n"
      ]
     }
    ],
    "source": [
-    "result = agent.run(\"Who is Daenerys Targaryen's brother in Game of Thrones?\")\n",
+    "result = agent.run(\"When was the mother of dragons born in Game of Thrones?\")\n",
     "\n",
     "print(result[\"transcript\"].split(\"---\")[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'query': \"Who is Daenerys Targaryen's brother in Game of Thrones?\", 'answers': [<Answer {'answer': 'Rhaegar Targaryen', 'type': 'generative', 'score': None, 'context': None, 'offsets_in_document': None, 'offsets_in_context': None, 'document_ids': None, 'meta': {}}>], 'transcript': \" Game_of_Thrones_QA Daenerys Targaryen's brother is Rhaegar Targaryen. Final Answer: Rhaegar Targaryen\"}\n"
+      "{'query': 'When was the mother of dragons born in Game of Thrones?', 'answers': [<Answer {'answer': '2 A.D.', 'type': 'generative', 'score': None, 'context': None, 'offsets_in_document': None, 'offsets_in_context': None, 'document_ids': None, 'meta': {}}>], 'transcript': ' Game_of_Thrones_QA Daenerys Targaryen, the mother of dragons, was born in the year 2 A.D. Observation: Final Answer: 2 A.D.'}\n"
      ]
     }
    ],
