--- a/notebooks/huggingface_transformers_agent.ipynb
+++ b/notebooks/huggingface_transformers_agent.ipynb
@@ -2,53 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ryan/github/generative-ai/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "from getpass import getpass\n",
-    "from huggingface_hub import login\n",
-    "from transformers import HfAgent\n",
-    "\n",
-    "from langchain.chat_models import Chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HUGGINGFACE_ACCESS_TOKEN=getpass(\"Enter Your HuggingFace API Access Token:\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Token will not been saved to git credential helper. Pass `add_to_git_credential=True` if you want to set the git credential as well.\n",
-      "Token is valid (permission: read).\n",
-      "Your token has been saved to /home/ryan/.cache/huggingface/token\n",
-      "Login successful\n"
-     ]
-    }
-   ],
-   "source": [
-    "login(HUGGINGFACE_ACCESS_TOKEN)"
+    "from getpass import getpass\n",
+    "from huggingface_hub import login\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline, LocalAgent\n"
    ]
   },
   {
@@ -57,31 +17,196 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Starcoder\n",
-    "# agent = HfAgent(\"https://api-inference.huggingface.co/models/bigcode/starcoder\")\n",
-    "# StarcoderBase\n",
-    "agent = HfAgent(\"https://api-inference.huggingface.co/models/bigcode/starcoderbase\")\n",
-    "# OpenAssistant\n",
-    "# agent = HfAgent(url_endpoint=\"https://api-inference.huggingface.co/models/OpenAssistant/oasst-sft-4-pythia-12b-epoch-3.5\")"
+    "# from dotenv import load_dotenv\n",
+    "# import os\n",
+    "# load_dotenv()\n",
+    "# HUGGINGFACEHUB_API_TOKEN=os.getenv(\"HUGGINGFACEHUB_API_TOKEN\")\n",
+    "# login(HUGGINGFACEHUB_API_TOKEN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install git+https://github.com/huggingface/transformers.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = \"TheBloke/CollectiveCognition-v1.1-Mistral-7B-GPTQ\"\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name, \n",
+    "                                             device_map=\"auto\",\n",
+    "                                             )\n",
+    "# model=model.to(\"cuda\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name,\n",
+    "                                          device_map=\"auto\"\n",
+    "                                          )\n",
+    "pipe = pipeline(task=\"text-generation\", model=model, tokenizer=tokenizer)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Starcoder\n",
+    "# agent = HfAgent(\"https://api-inference.huggingface.co/models/bigcode/starcoder\")\n",
+    "# StarcoderBase\n",
+    "agent = LocalAgent(model=model,tokenizer=tokenizer)\n",
+    "# OpenAssistant\n",
+    "# agent = HfAgent(url_endpoint=\"https://api-inference.huggingface.co/models/OpenAssistant/oasst-sft-4-pythia-12b-epoch-3.5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Error 503: {'error': 'Model bigcode/starcoderbase is currently loading', 'estimated_time': 2531.111572265625}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m res \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39;49mrun(\u001b[39m\"\u001b[39;49m\u001b[39mSummarize the content from the following website - https://huggingface.co/docs/transformers/transformers_agents\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[0;32m~/github/generative-ai/venv/lib/python3.10/site-packages/transformers/tools/agents.py:335\u001b[0m, in \u001b[0;36mAgent.run\u001b[0;34m(self, task, return_code, remote, **kwargs)\u001b[0m\n\u001b[1;32m    313\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    314\u001b[0m \u001b[39mSends a request to the agent.\u001b[39;00m\n\u001b[1;32m    315\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[39m```\u001b[39;00m\n\u001b[1;32m    333\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    334\u001b[0m prompt \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mformat_prompt(task)\n\u001b[0;32m--> 335\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgenerate_one(prompt, stop\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mTask:\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[1;32m    336\u001b[0m explanation, code \u001b[39m=\u001b[39m clean_code_for_run(result)\n\u001b[1;32m    338\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m==Explanation from the agent==\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00mexplanation\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/github/generative-ai/venv/lib/python3.10/site-packages/transformers/tools/agents.py:643\u001b[0m, in \u001b[0;36mHfAgent.generate_one\u001b[0;34m(self, prompt, stop)\u001b[0m\n\u001b[1;32m    641\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_generate_one(prompt)\n\u001b[1;32m    642\u001b[0m \u001b[39melif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code \u001b[39m!=\u001b[39m \u001b[39m200\u001b[39m:\n\u001b[0;32m--> 643\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mError \u001b[39m\u001b[39m{\u001b[39;00mresponse\u001b[39m.\u001b[39mstatus_code\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mresponse\u001b[39m.\u001b[39mjson()\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    645\u001b[0m result \u001b[39m=\u001b[39m response\u001b[39m.\u001b[39mjson()[\u001b[39m0\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mgenerated_text\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m    646\u001b[0m \u001b[39m# Inference API returns the stop sequence\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: Error 503: {'error': 'Model bigcode/starcoderbase is currently loading', 'estimated_time': 2531.111572265625}"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ryan/github/generative-ai/venv/lib/python3.10/site-packages/transformers/generation/utils.py:1421: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use and modify the model generation configuration (see https://huggingface.co/docs/transformers/generation_strategies#default-text-generation-configuration )\n",
+      "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==Explanation from the agent==\n",
+      "I will use the following tools: `text_downloader` to download the text from the website, then `summarizer` to create a summary.\n",
+      "\n",
+      "\n",
+      "==Code generated by the agent==\n",
+      "text = text_downloader(url=\"https://huggingface.co/docs/transformers/transformers_agents\")\n",
+      "summary = summarizer(text)\n",
+      "\n",
+      "\n",
+      "==Result==\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8adb2eccfbd54e20ade569c8898f214d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)ain/text_download.py:   0%|          | 0.00/500 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A new version of the following files was downloaded from https://huggingface.co/spaces/huggingface-tools/text-download:\n",
+      "- text_download.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6709b692cbbf4459b0f444da7616221c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)okenizer_config.json:   0%|          | 0.00/300 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bcd15327c99444c3ad9cfd752b1fc477",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)lve/main/config.json:   0%|          | 0.00/1.63k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e125144826ca4233904c13f2d12a6741",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)olve/main/vocab.json:   0%|          | 0.00/798k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a7cb323e3a545bc8ee167e503737403",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)olve/main/merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7868cef4dd3442cf8072d85f16491b85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/239 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f8c3b8e611c94ef1bc51059cf26858de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading pytorch_model.bin:   0%|          | 0.00/1.63G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -90,16 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Transformers is a training tool for TensorFlow. It allows you to create and train models. It's free and available to download and use. It has a lot of documentation. It also has some training tools. It can be used to improve performance and scalability.\""
+       "\"Transformers is a training tool for TensorFlow. It allows you to build models and train them. It's free and available to download. There are a number of tutorials and resources to get you started. There's also a lot of information on how to contribute to it.\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
