working example of milvus

--- a/notebooks/langchain_opensearch.ipynb
+++ b/notebooks/langchain_opensearch.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### UNCOMMENT THE OPENSEARCH SERVICE IN docker-compose.yml \n",
-    "#### IF YOU WANT TO USE THE CONTAINERIZED OPENSEARCH INSTANCE"
+    "## ENSURE THAT THE OPENSEARCH SERVICE (AND OPTIONALLY OPENSEARCH-DASHBOARDS) IN docker-compose.yml\n",
+    "### IS UNCOMMENTED AND RUNNING IF YOU WANT TO USE THE CONTAINERIZED INSTANCES"
    ]
   },
   {
@@ -858,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
