--- a/notebooks/haystack_examples/haystack_rag_with_own_docs.ipynb
+++ b/notebooks/haystack_examples/haystack_rag_with_own_docs.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_dir = \"../data/pdfs/\""
+    "doc_dir = \"../../data/pdfs/\""
    ]
   },
   {
