--- a/notebooks/haystack_examples/haystack_tableqa.ipynb
+++ b/notebooks/haystack_examples/haystack_tableqa.ipynb
@@ -110,7 +110,7 @@
         "\n",
         "tables = read_tables(f\"{doc_dir}/tables.json\")\n",
         "\n",
-        "my_table = pd.read_csv(\"../data/appl_stock.csv\").iloc[:10,:]\n",
+        "my_table = pd.read_csv(\"../../data/appl_stock.csv\").iloc[:10,:]\n",
         "my_table_id = uuid4().hex\n",
         "my_table_doc = Document(content=my_table, content_type=\"table\", id=my_table_id)\n",
         "tables.append(my_table_doc)\n",
