cleanup, prep for additonal branches; update langchain_agents example

--- a/jupyter/notebooks/haystack_examples/haystack_rag_with_own_docs.ipynb
+++ b/jupyter/notebooks/haystack_examples/haystack_rag_with_own_docs.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_dir = \"../../data/pdfs/\""
+    "doc_dir = \"../../../data/pdfs/\""
    ]
   },
   {
@@ -1147,7 +1147,7 @@
        "  ...],\n",
        " 'root_node': 'File',\n",
        " 'params': {},\n",
-       " 'file_paths': ['../data/pdfs//f150_manual.pdf'],\n",
+       " 'file_paths': ['../../data/pdfs//f150_manual.pdf'],\n",
        " 'node_id': 'DocumentStore'}"
       ]
      },
