--- a/jupyter/notebooks/retrieval_docstore_examples/langchain_opensearch.ipynb
+++ b/jupyter/notebooks/retrieval_docstore_examples/langchain_opensearch.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "loader = TextLoader(\"../../data/state_of_the_union.txt\")\n",
+    "loader = TextLoader(\"../../../data/state_of_the_union.txt\")\n",
     "documents = loader.load()\n",
     "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
     "docs = text_splitter.split_documents(documents)"
