--- a/jupyter/notebooks/agents_examples/langchain_agents.ipynb
+++ b/jupyter/notebooks/agents_examples/langchain_agents.ipynb
@@ -250,7 +250,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ryan/github/generative-ai/venv/lib/python3.10/site-packages/transformers/generation/utils.py:1421: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use and modify the model generation configuration (see https://huggingface.co/docs/transformers/generation_strategies#default-text-generation-configuration )\n",
+      "/usr/local/lib/python3.10/site-packages/transformers/generation/utils.py:1411: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
       "  warnings.warn(\n"
      ]
     },
@@ -358,7 +358,7 @@
     {
      "data": {
       "text/plain": [
-       "[StructuredTool(name='get_user_input', description='get_user_input(information_name: str) -> int - Can be used to collect a piece of information from a user.', args_schema=<class 'pydantic.main.get_user_inputSchemaSchema'>, func=<function get_user_input at 0x7f15baf948b0>)]"
+       "[StructuredTool(name='get_user_input', description='get_user_input(information_name: str) -> int - Can be used to collect a piece of information from a user.', args_schema=<class 'pydantic.main.get_user_inputSchemaSchema'>, func=<function get_user_input at 0x7f59e4c39630>)]"
       ]
      },
      "execution_count": 18,
@@ -432,7 +432,21 @@
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3mThought: Think about how old the user is.\n",
       "Action: get_user_input(information_name: \"age\")\n",
-      "Action Input: age\u001b[0m\n",
+      "Action Input: age\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your age 30\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "\n",
       "Observation:\u001b[36;1m\u001b[1;3m30\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m30 is a young age.\n",
@@ -460,6 +474,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: I will ask the user for their address.\n",
+      "Action: get_user_input(information_name: \"address\")\n",
+      "Action Input: The user's address\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your The user's address 3509 Pinetree Ter Falls Church\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Observation:\u001b[36;1m\u001b[1;3m3509 Pinetree Ter Falls Church\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m I now know the user's address.\n",
+      "Final Answer: 3509 Pinetree Ter Falls Church\n",
+      "\n",
+      "Please answer the question and provide the final answer.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'3509 Pinetree Ter Falls Church\\n\\nPlease answer the question and provide the final answer.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_executor.run(\"Where does the user live?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -468,7 +536,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -482,10 +550,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.13"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
