--- a/jupyter/notebooks/gguf_large_model.ipynb
+++ b/jupyter/notebooks/gguf_large_model.ipynb
@@ -2,39 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e22556de-f5a5-4aea-ace7-e6568a13cb44",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ctransformers import AutoModelForCausalLM, AutoTokenizer\n",
-    "from huggingface_hub import hf_hub_download"
+    "from huggingface_hub import hf_hub_download\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4dd60792-a787-4199-8d91-caf942142f58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_name = \"TheBloke/Llama-2-70B-chat-GGUF\"\n",
+    "# model_file = \"llama-2-70b-chat.Q4_K_M.gguf\"\n",
+    "\n",
+    "# model_name = \"TheBloke/Mistral-7B-OpenOrca-GGUF\"\n",
+    "# model_file = \"mistral-7b-openorca.Q4_K_M.gguf\"\n",
+    "\n",
+    "model_name = \"TheBloke/openchat_3.5-GGUF\"\n",
+    "model_file = \"openchat_3.5.Q4_K_M.gguf\"\n",
+    "\n",
+    "# model_name = \"TheBloke/vicuna-33B-GGUF\"\n",
+    "# model_file = \"vicuna-33b.Q4_K_M.gguf\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4dd60792-a787-4199-8d91-caf942142f58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"TheBloke/Llama-2-70B-chat-GGUF\"\n",
-    "model_file = \"llama-2-70b-chat.Q4_K_M.gguf\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "04eef5af-6ad5-41ae-ade5-7aec843a7200",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ace49dc628741a8ac444d3048ac1c11",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "'/root/.cache/huggingface/hub/models--TheBloke--Llama-2-70B-chat-GGUF/snapshots/6657b410331f892e2ea27eb435ef53aeefeedfd6/llama-2-70b-chat.Q4_K_M.gguf'"
+       "openchat_3.5.Q4_K_M.gguf:   0%|          | 0.00/4.37G [00:00<?, ?B/s]"
       ]
      },
-     "execution_count": 4,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/root/.cache/huggingface/hub/models--TheBloke--openchat_3.5-GGUF/snapshots/9145d8078ca54b163b4b7f7d45cf525b63ee77f8/openchat_3.5.Q4_K_M.gguf'"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "974c06c6-0190-4695-afdc-fcf173443e21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f6dac0227104a359a1934edc3726018",
+       "model_id": "b0e13e177d274fac95bed8a9d6d76794",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,7 +92,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10146e93fb4248e3b3745fa891c54ccb",
+       "model_id": "2b33c18ba5f342e29d91255ee370d3f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "(…)4b163b4b7f7d45cf525b63ee77f8/config.json:   0%|          | 0.00/31.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cdede076bc1f4b4ea7cc9e6f83c09048",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,12 +119,12 @@
     }
    ],
    "source": [
-    "llm = AutoModelForCausalLM.from_pretrained(model_name, model_file=model_file, model_type=\"llama\", gpu_layers=20)\n"
+    "llm = AutoModelForCausalLM.from_pretrained(model_name, model_file=model_file, model_type=\"llama\", gpu_layers=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9900254e-444c-4f5b-a8fd-1a2726afbf5d",
    "metadata": {},
    "outputs": [
@@ -92,22 +132,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " to find your gift. The purpose of life is to give it away.\n",
-      "-Pablo Picasso\n",
-      "I don’t want to get to the end of my life and find that I lived just for myself. I want to live a life that will outlast me, a life that will be remembered for generations to come. I want to make a difference in the world, to leave it a better place than I found it.\n",
-      "-Rick Warren\n",
-      "The purpose of life is not to be happy. The purpose of life is to matter, to make a difference, to have an impact on the world.\n",
-      "-Harold Kushner\n",
-      "The only way to do great work is to love what you do. Don’t waste your time doing things that don’t matter to you.\n",
-      "-Steve Jobs\n",
-      "The meaning of life is not something you can Google. It’s something you have to find for yourself. You have to think deeply, reflect on your experiences, and explore your own thoughts and feelings to discover what gives your life meaning. It’s a personal journey that requires effort and introspection.\n",
-      "-Kathy Broady\n",
-      "The purpose of life is not just to exist, but to persist. Not just\n"
+      " a question that has puzzled humans for centuries. It’s a complex and multifaceted topic, with no single\n",
+      "2.1804869174957275\n"
      ]
     }
    ],
    "source": [
-    "print(llm(\"The meaning of life is\"))"
+    "start_time = time.time()\n",
+    "print(llm(\"The meaning of life is\", max_new_tokens=25))\n",
+    "print(time.time() - start_time)"
    ]
   },
   {
