switch to model config objects; implement gguf CPU inference

--- a/jupyter/notebooks/gguf_large_model.ipynb
+++ b/jupyter/notebooks/gguf_large_model.ipynb
@@ -19,14 +19,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model_name = \"TheBloke/Llama-2-70B-chat-GGUF\"\n",
-    "# model_file = \"llama-2-70b-chat.Q4_K_M.gguf\"\n",
+    "model_name = \"TheBloke/Llama-2-13B-chat-GGUF\"\n",
+    "model_file = \"llama-2-13b-chat.Q4_K_M.gguf\"\n",
     "\n",
     "# model_name = \"TheBloke/Mistral-7B-OpenOrca-GGUF\"\n",
     "# model_file = \"mistral-7b-openorca.Q4_K_M.gguf\"\n",
     "\n",
-    "model_name = \"TheBloke/openchat_3.5-GGUF\"\n",
-    "model_file = \"openchat_3.5.Q4_K_M.gguf\"\n",
+    "# model_name = \"TheBloke/openchat_3.5-GGUF\"\n",
+    "# model_file = \"openchat_3.5.Q4_K_M.gguf\"\n",
     "\n",
     "# model_name = \"TheBloke/vicuna-33B-GGUF\"\n",
     "# model_file = \"vicuna-33b.Q4_K_M.gguf\""
@@ -42,22 +42,8 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ace49dc628741a8ac444d3048ac1c11",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "openchat_3.5.Q4_K_M.gguf:   0%|          | 0.00/4.37G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/root/.cache/huggingface/hub/models--TheBloke--openchat_3.5-GGUF/snapshots/9145d8078ca54b163b4b7f7d45cf525b63ee77f8/openchat_3.5.Q4_K_M.gguf'"
+       "'/root/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-chat-GGUF/snapshots/4458acc949de0a9914c3eab623904d4fe999050a/llama-2-13b-chat.Q4_K_M.gguf'"
       ]
      },
      "execution_count": 3,
@@ -78,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0e13e177d274fac95bed8a9d6d76794",
+       "model_id": "f3aefd116ef249599b1c26ebde27d9c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,21 +78,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b33c18ba5f342e29d91255ee370d3f7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "(…)4b163b4b7f7d45cf525b63ee77f8/config.json:   0%|          | 0.00/31.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdede076bc1f4b4ea7cc9e6f83c09048",
+       "model_id": "231748eb9e2e4e19b375982fe338d879",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,8 +104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " a question that has puzzled humans for centuries. It’s a complex and multifaceted topic, with no single\n",
-      "2.1804869174957275\n"
+      " a question that has puzzled philosophers and theologians for centuries. There are many different perspectives on what the\n",
+      "4.026142835617065\n"
      ]
     }
    ],
@@ -146,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ded813a-23cc-4c01-aa0a-1e3902418a65",
+   "id": "7ac5e765-eee1-4e30-9149-23cee8cfc936",
    "metadata": {},
    "outputs": [],
    "source": []
