increase context window with gguf models in notebook

--- a/jupyter/notebooks/gguf_large_model.ipynb
+++ b/jupyter/notebooks/gguf_large_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e22556de-f5a5-4aea-ace7-e6568a13cb44",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4dd60792-a787-4199-8d91-caf942142f58",
    "metadata": {},
    "outputs": [],
@@ -34,84 +34,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "04eef5af-6ad5-41ae-ade5-7aec843a7200",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/root/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-chat-GGUF/snapshots/4458acc949de0a9914c3eab623904d4fe999050a/llama-2-13b-chat.Q4_K_M.gguf'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hf_hub_download(model_name, filename=model_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "974c06c6-0190-4695-afdc-fcf173443e21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3aefd116ef249599b1c26ebde27d9c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 1 files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "231748eb9e2e4e19b375982fe338d879",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 1 files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "llm = AutoModelForCausalLM.from_pretrained(model_name, model_file=model_file, model_type=\"llama\", gpu_layers=0)"
+    "llm = AutoModelForCausalLM.from_pretrained(model_name, model_file=model_file, model_type=\"llama\", gpu_layers=0,\n",
+    "                                          # max_new_tokens = 1000,\n",
+    "                                       context_length = 4000\n",
+    "                                          )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "926d798b-3f72-4c38-881e-d197e4509f4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generation_kwargs = {\n",
+    "    \"max_new_tokens\":1000\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9900254e-444c-4f5b-a8fd-1a2726afbf5d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " a question that has puzzled philosophers and theologians for centuries. There are many different perspectives on what the\n",
-      "4.026142835617065\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
-    "print(llm(\"The meaning of life is\", max_new_tokens=25))\n",
+    "print(llm(\"The meaning of life is\", **generation_kwargs))\n",
     "print(time.time() - start_time)"
    ]
   },
